остались только мелочи

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="/media/css/style.css" rel="stylesheet" type="text/css" />
     <!--[if lte IE 8]><link rel="stylesheet" type="text/css" media="screen" href="/media/css/ie.css" /><![endif]-->
+    <link href="/media/js/fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" />
+    <link href="/media/js/fancybox/helpers/jquery.fancybox-thumbs.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="/media/js/jquery.js"></script>
     <script type="text/javascript" src="/media/js/jquery-ui-1.8.21.custom.min.js"></script>
+    <script type="text/javascript" src="/media/js/jquery.jcarousel.min.js"></script>
     {% block extended_js %}
     {% endblock %}
+    <script type="text/javascript" src="/media/js/fancybox/jquery.fancybox.pack.js"></script>
+    <script type="text/javascript" src="/media/js/fancybox/helpers/jquery.fancybox-thumbs.js"></script>
     <script type="text/javascript" src="/media/js/script.js"></script>
     <title>
         {% block title %}
