--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
                 {% endif %}
             {% endfor %}
 
-            <div class="random_tour"><a href="#"><span>Тур на&nbsp;удачу</span></a></div>
+            <div class="random_tour"><a href="/tours/luckytour/"><span>Тур на&nbsp;удачу</span></a></div>
         </div><!--/pieces-->
 
 
