--- a/templates/mainblock/order_form.html
+++ b/templates/mainblock/order_form.html
@@ -3,7 +3,7 @@
 	<div class="input"><label>Контактные данные</label>{{ form.contacts }}{{ form.contacts.errors }}</div>
 	<div class="textarea"><label>Комментарий к заказу</label>{{ form.note }}{{ form.note.errors }}</div>
 	<div class="btn1"><div class="btn1_in"><input type="button" name="" id="send_order" value="Оформить заявку" /></div></div>
-    <div>{{ form.hotel }}{{ form.hotel.errors }}
+    <div style="display: none;">{{ form.hotel }}{{ form.hotel.errors }}
     {{ form.tour }}{{ form.tour.errors }}</div>
 </form>
 
