--- a/templates/mainblock/country_list.html
+++ b/templates/mainblock/country_list.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block main %}
-    <div class="items">
+    <div class="items" style="margin-top: 36px;">
         {% autopaginate countries 12 %}
         {% for country in countries %}
             <div class="item">
