--- a/media/css/style.css
+++ b/media/css/style.css
@@ -883,7 +883,7 @@ input, textarea {
 .tour_hotel_des {
 	font-size: 16px;
 	line-height: 21px;
-	margin: -10px 0 12px 0;
+	margin: 0 0 12px 0;
 }
 .tour_info_r .for_tourist_zl {
 	margin-top: 12px;
@@ -1169,6 +1169,7 @@ input, textarea {
 	display: inline-block;
 	vertical-align: top;
 	margin: 0 36px 42px 0;
+	width: 276px;
 }
 .item_img {
 	position: relative;
@@ -1198,6 +1199,7 @@ input, textarea {
 }
 .item_des h3 {
 	font-size: 24px;
+	line-height: 22px;
 	font-weight: bold;
 	margin-bottom: 8px;
 }
@@ -1276,7 +1278,8 @@ input, textarea {
 	font-size: 36px;
 	line-height: 40px;
 	font-weight: bold;
-	width: 160px;
+	letter-spacing: -1px;
+	width: 170px;
 }
 
 .item_first_time {
