--- a/templates/mainblock/hotel_list.html
+++ b/templates/mainblock/hotel_list.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block main %}
-    <div class="items">
+    <div class="items" style="margin-top: 36px;">
         {% autopaginate hotels 12 %}
         {% for hotel in hotels %}
             <div class="item">
