--- a/Вёрстка/media/css/style.css
+++ b/Вёрстка/media/css/style.css
@@ -634,7 +634,7 @@ input, textarea {
 .promo_img_h {
 	color: #562d01;
 	font-size: 100px;
-	line-height: 110px;
+	line-height: 100px;
 	font-weight: bold;
 	position: absolute;
 	top: 60px;
@@ -759,6 +759,33 @@ input, textarea {
 	vertical-align: top;
 	margin: 0 4px 4px 0;
 }
+
+
+
+.promo_arr_l, .promo_arr_r {
+	text-decoration: none;
+	display: block;
+	position: absolute;
+	background: url('../img/promo_arrs.png') no-repeat;
+	width: 44px;
+	height: 38px;
+}
+.promo_arr_l {
+	top: 260px;
+	left: 4px;
+}
+.promo_arr_l:active {
+	top: 262px;
+}
+.promo_arr_r {
+	background-position: 0 -48px;
+	top: 360px;
+	right: 54px;
+}
+.promo_arr_r:active {
+	top: 362px;
+}
+
 /*/promo*/
 
 
@@ -883,7 +910,7 @@ input, textarea {
 .tour_hotel_des {
 	font-size: 16px;
 	line-height: 21px;
-	margin: -10px 0 12px 0;
+	margin: 0 0 12px 0;
 }
 .tour_info_r .for_tourist_zl {
 	margin-top: 12px;
@@ -1169,6 +1196,7 @@ input, textarea {
 	display: inline-block;
 	vertical-align: top;
 	margin: 0 36px 42px 0;
+	width: 276px;
 }
 .item_img {
 	position: relative;
@@ -1198,6 +1226,7 @@ input, textarea {
 }
 .item_des h3 {
 	font-size: 24px;
+	line-height: 22px;
 	font-weight: bold;
 	margin-bottom: 8px;
 }
@@ -1276,7 +1305,8 @@ input, textarea {
 	font-size: 36px;
 	line-height: 40px;
 	font-weight: bold;
-	width: 160px;
+	letter-spacing: -1px;
+	width: 170px;
 }
 
 .item_first_time {
