--- a/templates/mainblock/show_tour.html
+++ b/templates/mainblock/show_tour.html
@@ -25,73 +25,77 @@
 
 {% block main %}
     <div class="promo">
-            {% for slide in tour.get_tour_slider_images %}
-                <div class="promo_img promo_img_slider" {% if not forloop.first %}style="display: none;"{% endif %}>
-                    {% thumbnail slide.image_main "1040x466" crop="center" as im %}
-                        <img src="{{ im.url }}" alt="" width="1040" height="466"/>
-                    {% endthumbnail %}
-                    <div class="promo_img_fr"></div>
-                    <div class="promo_img_h" style="color: {{ slide.image_main_title_colorpicker }};">{{ slide.image_main_title }}</div>
-                    <div class="promo_nums" style="color: {{ slide.interesting_facts_colorpicker }};">
-                        {% for fact in slide.get_facts %}
-                            <div class="{% if forloop.counter == 1 %}promo_num_1{% else %}promo_num_2{% endif %}">
-                                <div class="promo_num_val">{{ fact.value }}</div>
-                                <div class="promo_num_name">{{ fact.title }}</div>
-                            </div>
-                        {% endfor %}
-                    </div>
-                </div><!--/promo_img-->
-            {% endfor %}
-
-  			<div class="promo_l col">
-                {% for slide in tour.get_tour_slider_images %}
-                    <div class="promo_map promo_map_slider" {% if not forloop.first %}style="display: none;"{% endif %}>
-                        <img src="{{ slide.get_map_cropimg_url }}" alt="" width="225" height="225"/>
-                        <div class="promo_map_name">{{ slide.map_title }}</div>
-                        <div class="promo_map_des">{{ slide.map_subtitle }}</div>
-                        {% comment %}<div class="promo_map_lnk"><img src="/media/img/flags/jp.png" alt="" /><a href="#">О Японии</a></div>{% endcomment %}
-                    </div><!--/promo_map-->
-                {% endfor %}
-  				<!--<div class="promo_note">
-  					<p><img src="/media/images/promo_note.jpg" alt="" /></p>
-  					<h2>Самая известная винодельческая страна в мире.</h2>
-  					<p>Вино здесь стали делать еще со времен нашествия римлян. Кстати, 72 % французов с трудом разбираются в многочисленных винных производителях, ибо только у Бордо их более 9000 разновидностей</p>
-  				</div>--><!--/promo_note-->
-  			</div><!--/promo_l-->
-
-  			<div class="promo_r col">
-  				<div class="promo_text text">
-  					{{ tour.description|safe }}
-  				</div>
-  			</div><!--/promo_r-->
-
-  			<div class="promo_photos">
-                <div class="promo_photos_l">
-                    {% for photo in left_attached_photos %}
-                      {% if forloop.counter > 15 %}
-                          {% thumbnail photo.image "1000" upscale=0 as big %}
-                              <a href="{{ big.url }}" style="display: none;" rel="{{ tour.id }}" class="fancybox-thumb"></a>
-                          {% endthumbnail %}
-                      {% else %}
-                          {% thumbnail photo.image "1000" upscale=0 as big %}
-                          {% thumbnail photo.image "38x38" crop="center" as im %}
-                              <a href="{{ big.url }}" rel="{{ tour.id }}" class="fancybox-thumb"><img src="{{ im.url }}" width="38" height="38" alt="" /></a>
-                          {% endthumbnail %}
-                          {% endthumbnail %}
-                      {% endif %}
+        <div>
+        {% for slide in tour.get_tour_slider_images %}
+            <div class="promo_img {% if not forloop.first %} hidden_slide{% else %} curr_slide{% endif %}">
+                {% thumbnail slide.image_main "1040x466" crop="center" as im %}
+                    <img src="{{ im.url }}" alt="" width="1040" height="466"/>
+                {% endthumbnail %}
+                <div class="promo_img_fr"></div>
+                <div class="promo_img_h" style="color: {{ slide.image_main_title_colorpicker }};">{{ slide.image_main_title }}</div>
+                <div class="promo_nums" style="color: {{ slide.interesting_facts_colorpicker }};">
+                    {% for fact in slide.get_facts %}
+                        <div class="{% if forloop.counter == 1 %}promo_num_1{% else %}promo_num_2{% endif %}">
+                            <div class="promo_num_val">{{ fact.value }}</div>
+                            <div class="promo_num_name">{{ fact.title }}</div>
+                        </div>
                     {% endfor %}
                 </div>
-                <div class="promo_photos_r">
-                    {% for photo in right_attached_photos %}
+                <a href="#" class="promo_arr_l"></a>
+				<a href="#" class="promo_arr_r"></a>
+            </div>
+        {% endfor %}
+        </div>
+
+        <div class="promo_l col">
+            {% for slide in tour.get_tour_slider_images %}
+                <div class="promo_map{% if not forloop.first %} hidden_slide{% else %} curr_slide{% endif %}">
+                    <img src="{{ slide.get_map_cropimg_url }}" alt="" width="225" height="225"/>
+                    <div class="promo_map_name">{{ slide.map_title }}</div>
+                    <div class="promo_map_des">{{ slide.map_subtitle }}</div>
+                    {% comment %}<div class="promo_map_lnk"><img src="/media/img/flags/jp.png" alt="" /><a href="#">О Японии</a></div>{% endcomment %}
+                </div>
+            {% endfor %}
+            <!--<div class="promo_note">
+                <p><img src="/media/images/promo_note.jpg" alt="" /></p>
+                <h2>Самая известная винодельческая страна в мире.</h2>
+                <p>Вино здесь стали делать еще со времен нашествия римлян. Кстати, 72 % французов с трудом разбираются в многочисленных винных производителях, ибо только у Бордо их более 9000 разновидностей</p>
+            </div>--><!--/promo_note-->
+        </div><!--/promo_l-->
+
+        <div class="promo_r col">
+            <div class="promo_text text">
+                {{ tour.description|safe }}
+            </div>
+        </div><!--/promo_r-->
+
+        <div class="promo_photos">
+            <div class="promo_photos_l">
+                {% for photo in left_attached_photos %}
+                  {% if forloop.counter > 15 %}
+                      {% thumbnail photo.image "1000" upscale=0 as big %}
+                          <a href="{{ big.url }}" style="display: none;" rel="{{ tour.id }}" class="fancybox-thumb"></a>
+                      {% endthumbnail %}
+                  {% else %}
                       {% thumbnail photo.image "1000" upscale=0 as big %}
                       {% thumbnail photo.image "38x38" crop="center" as im %}
-                        <a href="{{ big.url }}" rel="{{ tour.id }}" class="fancybox-thumb"><img src="{{ im.url }}" width="38" height="38" alt="" /></a>
+                          <a href="{{ big.url }}" rel="{{ tour.id }}" class="fancybox-thumb"><img src="{{ im.url }}" width="38" height="38" alt="" /></a>
                       {% endthumbnail %}
                       {% endthumbnail %}
-                    {% endfor %}
-                </div>
-  			</div><!--/promo_photos-->
-  		</div><!--/promo-->
+                  {% endif %}
+                {% endfor %}
+            </div>
+            <div class="promo_photos_r">
+                {% for photo in right_attached_photos %}
+                  {% thumbnail photo.image "1000" upscale=0 as big %}
+                  {% thumbnail photo.image "38x38" crop="center" as im %}
+                    <a href="{{ big.url }}" rel="{{ tour.id }}" class="fancybox-thumb"><img src="{{ im.url }}" width="38" height="38" alt="" /></a>
+                  {% endthumbnail %}
+                  {% endthumbnail %}
+                {% endfor %}
+            </div>
+        </div><!--/promo_photos-->
+    </div><!--/promo-->
 
     <div class="timeline">
         <div class="timeline_start">
